Fixed tiny overflow causing 0.6px scrollbar in many cases

--- a/src/page/style.css
+++ b/src/page/style.css
@@ -1,5 +1,5 @@
 :root {
-    --headerHeight: 70px;
+    --headerHeight: 71px;
     --navBarWidth: 350px;
     --maxContentWidth: 1500px;
     --pagePadding: 2rem;
@@ -22,6 +22,7 @@ header {
     background-color: #13171fbd;
     position: sticky;
     top: 0;
+    height: var(--headerHeight);
 }
 
 
